--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--my style css-->
     <link rel="stylesheet" type="text/css" href="css/indexStyle.css">
 
@@ -16,13 +17,22 @@
     
     <div class='container'>
         <div class="jumbotron text-center">
-            <h1 class="display-3">Random Quote Generator</h1>
+            <img src="img/mariposaImage.jpg">
+            <h1 class="display-5">Random Quote Generator</h1>
             <p class="quote"></p>
             <p class="author"></p>
             <p><a class="btn btn-lg btn-success" id='quoteBtn' href="#" role="button">New Quote</a></p>
             <p><a class="btn btn-lg btn-success" id='tweetBtn' href="#" role="button">Tweet</a></p>
         </div>
     </div>
+
+    <footer class="blog-footer">
+            <div class='row'>
+              <div class='col-sm'>
+                <p class='text-center'>Random Quote Generator built with <i class="fa fa-heart" aria-hidden="true"></i> by Dan <a href="https://dansimonson.github.io/portfolio/">@mariposaweb.net</p>
+              </div>
+            </div>
+          </footer>
 
 
 
